Fix start - stop session issues